[package]
name = "codecrafters-git"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"
bytes = "1.3.0"
clap = { version = "4.5.48", features = ["derive"] }
flate2 = "1.0.34"
sha1 = "0.10.6"
thiserror = "1.0.38"
