[package]
name = "codecrafters-git"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.5.48", features = ["derive"] }
fallible-iterator = "0.3.0"
flate2 = "1.0.34"
hex = "0.4.3"
sha1 = "0.10.6"
time = { version = "0.3.41", features = ["formatting", "local-offset", "macros"] }
